Fixed IllegalArgumentException caused by .list-cell -fx-alignment: right;

--- a/demo/src/main/resources/com/journalfrontend/styles.css
+++ b/demo/src/main/resources/com/journalfrontend/styles.css
@@ -31,7 +31,6 @@
 .list-cell {
     -fx-background-color: #ffb5aa, #ffc1b8;
     -fx-background-insets: 0, 1 1 1 1;
-    -fx-alignment: right;
     -fx-text-fill: rgb(34, 34, 34);
 }
 
